flickering fix

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -114,6 +114,11 @@ tr.angular-ui-tree-empty {
 
 /*-----Video Thumbnail------*/
 
+.image-thumb {
+    max-height: 100%;
+    max-width: 100%;
+}
+
 .video-list-thumbs {}
 
 .video-list-thumbs>li {
